// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage should not render if missing 1`] = `null`;

exports[`ErrorMessage should render application error 1`] = `
<Text
  style={
    Object {
      "color": "red",
    }
  }
>
  Error: 
  app error
</Text>
`;

exports[`ErrorMessage should render unknown error 1`] = `
<Text
  style={
    Object {
      "color": "red",
    }
  }
>
  Error: 
  Unexpected error occured :(
</Text>
`;
